fix height on mobile view

--- a/src/styles/global.module.css
+++ b/src/styles/global.module.css
@@ -1,6 +1,7 @@
 /* ----- wrapper ----- */
 @media only screen and (max-width: 768px) {
     .background {
+        height: 100vh;
         background-size: cover;
         background-attachment: scroll;
         background-repeat: repeat;   
